@@ -1,5 +1,6 @@
 Selenium 2.47.0 (in development)
 * Adding ability to make remote call for webelement screenshots in accordance to the W3C spec
+* Adding api to authenticate HTTP Auth modal dialogs via driver.switch_to.alert (beta)
 
 Selenium 2.46.0
 * Firefox support up to 38
